# voicevox-rs

./: Cargo.toml  README.md  words.tsv
cfg/: words.tsv
src/: client.rs  lib.rs
