[package]
name = "voicevox-rs"
version = "0.4.6" # change with html_root_url in lib.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "voicevox client library for Rust"
keywords = ["voicevox", "voice", "vocoder", "audio", "synthesizer"]
categories = ["multimedia", "multimedia::audio", "simulation", "api-bindings"]
license = "MIT"

documentation = "https://docs.rs/voicevox-rs/"
homepage = "https://crates.io/crates/voicevox-rs"
repository = "https://github.com/nomissbowling/voicevox-rs"

readme = "README.md"

#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "voicevox"

[dependencies]
aho-corasick = { version = "1.0.4" }
csv = { version = "1.2.2" }
serde = { version = "1.0.171" }
serde_derive = { version = "1.0.171" }
# serde = { version = "1.0.171", features = ["derive"] } # 1.0.171
serde_json = { version = "1.0.105" } # 1.0.103
serde_urlencoded = { version = "0.7.1" }
reqwest = { version = "0.11.18", features = ["blocking", "cookies", "json"] } # 0.11.16
# cookie = { version = "0.14", features = ["secure", "percent-encode"] } # 0.14.3
rodio = { version = "0.17.1" }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
